--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "browser-image-compression": "^1.0.13",
+    "get-youtube-id": "^1.0.1",
     "history": "^5.0.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
