--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "get-youtube-id": "^1.0.1",
     "history": "^5.0.0",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-aws-s3": "^1.3.0",
