--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^32.0.0",
+    "@ckeditor/ckeditor5-react": "^4.0.0",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "browser-image-compression": "^1.0.13",
+    "ckeditor4-react": "^1.4.2",
     "get-youtube-id": "^1.0.1",
     "history": "^5.0.0",
     "jquery": "^3.5.1",
