--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-aws-s3": "^1.3.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-drag-reorder": "^1.2.0",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
